@@ -26,18 +26,18 @@ class Q_DECL_EXPORT EmitSignal : public Marshall {
 private:
 	QObject *_qobj;
 	int _id;
-	MocArgument *_args;
+	QList<MocArgument*> _args;
 	Smoke::StackItem * _sp;
 	int _items;
 	int _cur;
 	Smoke::Stack _stack;
 	bool _called;
 public:
-	EmitSignal(QObject *qobj, int id, int items, MocArgument * args, Smoke::StackItem *sp);
+	EmitSignal(QObject *qobj, int id, int items, QList<MocArgument*> args, Smoke::StackItem *sp);
 
 	~EmitSignal();
 
-	inline const MocArgument &arg() { return _args[_cur + 1]; }
+	inline const MocArgument &arg() { return *_args[_cur + 1]; }
 	inline SmokeType type() { return arg().st; }
 	inline Marshall::Action action() { return Marshall::FromObject; }
 	inline Smoke::StackItem &item() { return _stack[_cur]; }
