@@ -25,19 +25,18 @@ private:
 	void * _obj;
 	const char * _slotname;
 	int _items;
-	MocArgument *_args;
-	MocArgument * _mocret;
+	QList<MocArgument*> _args;
 	void **_o;
 	int _cur;
 	bool _called;
 	Smoke::StackItem *_sp;
 	Smoke::Stack _stack;
 public:
-	InvokeSlot(void * obj, const char * slotname, int items, MocArgument * args, void** o);
+	InvokeSlot(void * obj, const char * slotname, QList<MocArgument*> args, void** o);
 
 	~InvokeSlot();
 
-	inline const MocArgument &arg() { return _args[_cur + 1]; }
+	inline const MocArgument &arg() { return *_args[_cur + 1]; }
 	inline SmokeType type() { return arg().st; }
 	inline Marshall::Action action() { return Marshall::ToObject; }
 	inline Smoke::StackItem &item() { return _stack[_cur]; }
