@@ -26,15 +26,15 @@
 */
 class Q_DECL_EXPORT SignalReturnValue : public Marshall {
 private:
-	MocArgument * _replyType;
+	QList<MocArgument*> _replyType;
 	Smoke::Stack _stack;
 	Smoke::StackItem * _result;
 public:
-	SignalReturnValue(void ** o, Smoke::StackItem * result, MocArgument * replyType);
+	SignalReturnValue(void ** o, Smoke::StackItem * result, QList<MocArgument*> replyType);
 
 	~SignalReturnValue();
 
-	inline SmokeType type() { return _replyType[0].st; }
+	inline SmokeType type() { return _replyType[0]->st; }
 	inline Marshall::Action action() { return Marshall::ToObject; }
 	inline Smoke::StackItem &item() { return _stack[0]; }
 	inline Smoke::StackItem &var() { return *_result; }
