@@ -305,6 +305,9 @@ enum MocArgumentType {
     xmoc_ptr,
     xmoc_bool,
     xmoc_int,
+    xmoc_uint,
+    xmoc_long,
+    xmoc_ulong,
     xmoc_double,
     xmoc_charstar,
     xmoc_QString,
